--- a/backend/src/main/webapp/app/views/uploadFile/main.html
+++ b/backend/src/main/webapp/app/views/uploadFile/main.html
@@ -189,7 +189,7 @@
 							</tr>
 					    </thead>
 						<tbody>
-					     	<tr ng-repeat="lst in orderFiles" ng-class="{'blink_me': lst.status == 1}">
+					     	<tr ng-repeat="lst in orderFiles">
 								<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td>{{ lst.createdDateTime | date:'dd/MM/yyyy HH:mm:ss' }}</td>
 								<td>{{ lst.customerName }}</td>
@@ -200,7 +200,8 @@
 								<td>
 									<i class="fa fa-times fa-lg" style="cursor: pointer;" ng-click="removeItem(lst)" 
 									   title="{{ lst.status == 0 ? 'ยังไม่ลงข้อมูล' : (lst.status == 1 ? 'กำลังลงข้อมูล' : 'ลงข้อมูลเสร็จแล้ว') }}"
-									   ng-style="lst.status == 0 ? {'color': '#fd716d;'} : (lst.status == 1 ? {'color': '#e4d848'} : {'color': '#55bb55'})"></i>
+									   ng-style="lst.status == 0 ? {'color': '#fd716d;'} : (lst.status == 1 ? {'color': '#e4d848'} : {'color': '#55bb55'})"
+									   ng-class="{'blink_me': lst.status == 1}"></i>
 								</td>
 							</tr>
 					    </tbody>
