--- a/backend/src/main/webapp/app/views/uploadFile/main.html
+++ b/backend/src/main/webapp/app/views/uploadFile/main.html
@@ -22,18 +22,19 @@
 	}
 	
 	#app {
-		/* -webkit-column-count: 4;
+		-webkit-column-count: 4;
 		-moz-column-count: 4;
 		column-count: 4; */
-		/* -webkit-column-gap: 15px;
+		 -webkit-column-gap: 15px;
 		-moz-column-gap: 15px;
-		column-gap: 15px; */
-		-webkit-column-count: 30;
+		column-gap: 15px; 
+		
+		/* -webkit-column-count: 30;
 		-moz-column-count: 30;
 		column-count: 30;
 		-webkit-column-gap: 22px;
 		-moz-column-gap: 22px;
-		column-gap: 22px;
+		column-gap: 22px; */
 	}
 	#app img {
 		width: 100%;
