--- a/backend/src/main/webapp/app/views/dealer/main.html
+++ b/backend/src/main/webapp/app/views/dealer/main.html
@@ -76,6 +76,17 @@
 								            <input type="radio" name="enabled" ng-value="false" ng-checked="!dealer.enabled" ng-model="dealer.enabled">disable
 								        </label>
 							       	</div>
+							       	
+							       	<div class="form-group form-group-sm">
+							        	<label>ข้อมูลภาพ &nbsp;&nbsp;</label>
+								        <label class="radio-inline">
+								            <input type="radio" name="orderImg" ng-value="true" ng-checked="dealer.orderImg" ng-model="dealer.orderImg">enable
+								        </label>
+								        <label class="radio-inline">
+								            <input type="radio" name="orderImg" ng-value="false" ng-checked="!dealer.orderImg" ng-model="dealer.orderImg">disable
+								        </label>
+							       	</div>
+							       	
 				  				</div>
 				  				<div class="col-md-6">
 									<div class="form-group form-group-sm">
