--- a/backend/src/main/webapp/app/views/inputView/main.html
+++ b/backend/src/main/webapp/app/views/inputView/main.html
@@ -11,11 +11,21 @@
 		width: 100%;
 		vertical-align: inherit;
 	}
-	.mayfender {
-		text-align: center;
-	  	margin-top: 30%;
-	  	widows: 100%;
+	.pending-orderfile {
+	  	margin-top: 100px; 
+	  	text-align: center;
 	}
+	.pending-orderfile tbody tr td:first-child {
+		text-align: right;
+		width: 50%;
+		font-size: 18px;
+	}
+	.pending-orderfile tbody tr td:nth-child(2) {
+		text-align: left;
+		width: 50%;
+		font-size: 18px;
+	}
+	
 	.imgTitle {
 		text-align: center;
 	}
