--- a/backend/src/main/webapp/app/views/inputView/main.html
+++ b/backend/src/main/webapp/app/views/inputView/main.html
@@ -137,3 +137,8 @@
 		
 	</div>
 </div>
+
+<!-- Audio -->
+<audio id="notifyNewImg">
+  <source src="sounds/beyond-doubt-2.mp3" type="audio/mpeg">
+</audio>
