--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -87,6 +87,25 @@
 	            <input type="radio" name="createdByLog" value="0" ng-checked="data.createdByLog == 0" ng-model="data.createdByLog">By login
 	        </label>
        </div>
+       
+       
+       
+       
+       
+       <div class="form-group" ng-show="group0">
+	        <label>Specified Field Search &nbsp;&nbsp;</label>
+	        <label class="radio-inline">
+	            <input type="radio" name="fieldSearch" value="1" ng-checked="data.fieldSearch == 1" ng-model="data.fieldSearch">Yes
+	        </label>
+	        <label class="radio-inline">
+	            <input type="radio" name="fieldSearch" value="0" ng-checked="data.fieldSearch == 0" ng-model="data.fieldSearch">No
+	        </label>
+       </div>
+       
+       
+       
+       
+       
        <div class="form-group" ng-show="group0">
 	        <label>User Editable &nbsp;&nbsp;</label>
 	        <label class="radio-inline">
