--- a/backend/src/main/webapp/app/views/tools/manageData.html
+++ b/backend/src/main/webapp/app/views/tools/manageData.html
@@ -5,7 +5,7 @@
                  <ul class="nav nav-tabs">
                      <li ng-class="{'active': tabActived == 1}" ng-click="tabActived = 1"><a href="" data-toggle="tab">ผลการติดตาม</a>
                      </li>
-                     <li ng-class="{'active': tabActived == 2}" ng-click="tabActived = 2"><a href="profile-pills" data-toggle="tab">Coming soon</a>
+                     <li ng-class="{'active': tabActived == 2}" ng-click="tabActived = 2"><a href="profile-pills" data-toggle="tab">ล้างข้อมูล</a>
                      </li>
                  </ul>
                  <div class="tab-content">
@@ -13,24 +13,57 @@
                          <div>
                              <br />
 	                         <h4 style="text-decoration: underline;">ย้ายข้อมูลผลการติดตามเก่าไปที่ table ใหม่</h4>
+                             <br />
                              <p>จำนวนข้อมูลผลการติดตามของระบบ : <b>{{ inTraceWorkSystem | number:0 }}</b></p>
                              <p>จำนวนข้อมูลผลการติดตามเก่าจากผู้ว่าจ้าง : <b>{{ inTraceWorkOld | number:0 }}</b></p>
                              <p>จำนวนข้อมูลผลการติดตามทั้งหมด : <b>{{ inTraceWorkAll | number:0 }}</b></p>
                              <p>จำนวนข้อมูลผลการติดตามเก่าจากผู้ว่าจ้าง ที่ table ใหม่ : <b>{{ inTraceWorkOldAll | number:0 }}</b></p>
                              
-                             <button type="button" class="btn btn-warning" ng-click="checkData()">เช็คข้อมูล</button>
-                             <button type="button" class="btn btn-danger" ng-click="moveTraceData()">{{ btnTxt }}</button>
+                             <button type="button" class="btn btn-warning btn-outline" ng-click="checkData()">เช็คข้อมูล</button>
+                             <button type="button" class="btn btn-danger btn-outline" ng-click="moveTraceData()">{{ btnTxt }}</button>
                              
-                             <br />
-                             <hr />
-	                         <h4 style="text-decoration: underline;">ลบข้อมูลผลการติดตาม</h4>
-                             <p>Coming soon</p>
                          </div>
                      </div>
                      <div class="tab-pane fade" id="profile-pills" ng-class="{'active in': tabActived == 2}">
-                         <div>
-	                         <h4>Coming soon</h4>
-                         </div>
+                          <div>
+                             <br />
+	                         <h4 style="text-decoration: underline;">ล้างข้อมูลเก่าเพื่อให้ Performance ดีขึ้น</h4>
+                             <br />
+
+							 <div class="row">
+								<div class="col-xs-8">
+									<form>
+										<div class="input-group">
+											<span class="input-group-addon">Module Name</span> 
+											<!-- <input type="text" class="form-control" placeholder="Table Name"> -->
+											<select class="form-control" ng-model="formData.module" ng-options="option as option.title for option in modules">
+												<option value="">--กรุณาเลือก--</option>
+											</select>
+										</div>
+										<br>
+										<div class="input-group">
+											<span class="input-group-addon">Column Name</span>
+											<select class="form-control" ng-model="formData.field" ng-options="option as option.field for option in formData.module.fields">
+												<option value="">--กรุณาเลือก--</option>
+											</select>
+										</div>
+										<br>
+										<div class="input-group">
+											<span class="input-group-addon">Condition To Clear</span> 
+											<select class="form-control" ng-model="formData.conditionName" ng-options="option.id as option.title for option in formData.field.condName">
+												<option value="">--กรุณาเลือก--</option>
+											</select>
+											<span class="input-group-addon">Condition Value</span> 
+											<select class="form-control" ng-model="formData.conditionValue" ng-options="option.id as option.title for option in formData.field.condVal">
+												<option value="">--กรุณาเลือก--</option>
+											</select>
+										</div>
+										<br>
+										<button type="submit" class="btn btn-primary btn-outline">Proceed</button>
+									</form>								
+								</div>
+							</div>
+						</div>
                      </div>
                  </div>
              </div>
